# BedrockMechanics

./: .breakpoints  README.md  functions.py  main.py  pyproject.toml  sunucular.txt  uyan.py
cogs/: addon.py  data.py  feedback.py  nbt_command.py  resource.py  skin.py  template.py  time_command.py  uuid.py
manifest_templates/: dependent.txt  dependent_meta.txt  non_dependent.txt  non_dependent_meta.txt  skin_pack.txt
nbts/: nbt.txt
skin_pack/: manifest.json  skins.json
