[tool.poetry]
name = "repl_python3_46bf89ee-f3db-446c-b740-3f43bcde7b09"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
discord-together = "^1.1.0"
"dislash.py" = "^1.2.4"
zipfile36 = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
